tests/miz/pass/types/pass_type_elaboration_distinct_reserved_object_variable_equality_001.miz
reserve x, y for object;
theorem DistinctReservedObjectVariableEqualityPayloadBoundary: x = y;
