tests/miz/fail/parser/fail_parser_set_comprehension_missing_type_001.miz
theorem MissingGeneratorType: { x where x is : thesis } = y;
